--- a/HeirarchicalStateMachine.vcxproj
+++ b/HeirarchicalStateMachine.vcxproj
@@ -173,6 +173,42 @@
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="assets\mmraw\12-129172_megaman-x4-enemy-sprites-hd-png-download.png" />
+    <Image Include="assets\mmraw\381-3817771_enemies-megaman-enemy-sprite-sheet.png" />
+    <Image Include="assets\mmraw\6.png" />
+    <Image Include="assets\mmraw\bbabdae82710f75aaccac13d6fcbd8ff.png" />
+    <Image Include="assets\mmraw\d1meywg-f0d29f9f-1088-40cf-b692-4bcc6e2f3011.jpg" />
+    <Image Include="assets\mmraw\eighth.png" />
+    <Image Include="assets\mmraw\fifth-tenth.png" />
+    <Image Include="assets\mmraw\first.png" />
+    <Image Include="assets\mmraw\firstHeld.png" />
+    <Image Include="assets\mmraw\fourth.png" />
+    <Image Include="assets\mmraw\mega-man-x-sprite-sheet-88x5z7tuf6a0edkp-88x5z7tuf6a0edkp.png" />
+    <Image Include="assets\mmraw\MegaManXEnnemies.gif" />
+    <Image Include="assets\mmraw\MegaManXSheet1.gif" />
+    <Image Include="assets\mmraw\MegaManXSheet11.gif" />
+    <Image Include="assets\mmraw\MegaManXSheet13.gif" />
+    <Image Include="assets\mmraw\MegaManXSheet17.gif" />
+    <Image Include="assets\mmraw\MegaManXSheet6.gif" />
+    <Image Include="assets\mmraw\MegaManXSheet7.gif" />
+    <Image Include="assets\mmraw\MegaManXSheet9.gif" />
+    <Image Include="assets\mmraw\mega_man_nes_sprite_sheet_by_dragondeplatino_d87jouv-fullview.jpg" />
+    <Image Include="assets\mmraw\mmm-mmx6dnadude.gif" />
+    <Image Include="assets\mmraw\mmm-mmxarmour.gif" />
+    <Image Include="assets\mmraw\mmx2_croakhopper.png" />
+    <Image Include="assets\mmraw\mmx4__king_poseidon.gif" />
+    <Image Include="assets\mmraw\MMX_Best.png" />
+    <Image Include="assets\mmraw\mmx_iOS_enemies1.png" />
+    <Image Include="assets\mmraw\napalmpbsheet.gif" />
+    <Image Include="assets\mmraw\newSpriteShee.png" />
+    <Image Include="assets\mmraw\ninth.png" />
+    <Image Include="assets\mmraw\secondNocharge.png" />
+    <Image Include="assets\mmraw\seventh.png" />
+    <Image Include="assets\mmraw\sixth.png" />
+    <Image Include="assets\mmraw\third.png" />
+    <Image Include="assets\mmraw\thirdCharge.png" />
+    <Image Include="assets\mmraw\thirdNoCharge.png" />
+    <Image Include="assets\mmraw\zerox4sheet.gif" />
     <Image Include="assets\PlayerAtlas.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
