fix for my machine

--- a/HeirarchicalStateMachine.vcxproj
+++ b/HeirarchicalStateMachine.vcxproj
@@ -71,8 +71,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\AUStudent\Desktop\sdks\SFML-3.0.0\include;$(ProjectDir);$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\AUStudent\Desktop\sdks\SFML-3.0.0\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\sdks\sfml3\include;$(ProjectDir);$(IncludePath)</IncludePath>
+    <LibraryPath>C:\sdks\sfml3\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\sdks\sfml3\include;$(ProjectDir);$(IncludePath)</IncludePath>
