input system in place.  can add keys easily without breaking other functionality, and its set up to work on player or objects as scripted behaviors instead of button pressed(NTI)

--- a/HeirarchicalStateMachine.vcxproj
+++ b/HeirarchicalStateMachine.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="FSM\Events.h" />
     <ClInclude Include="FSM\FSM.h" />
     <ClInclude Include="FSM\PlayerAnimFSM.h" />
+    <ClInclude Include="GameKeyEnum.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="InputSource.h" />
     <ClInclude Include="InputSourceTypes.h" />
