better system fro animation.  It is a little complicated, need to consolidate things but its easy to follow to add more states and rules for changing state, handled automatically once put in with the others

--- a/HeirarchicalStateMachine.vcxproj.filters
+++ b/HeirarchicalStateMachine.vcxproj.filters
@@ -105,6 +105,15 @@
     <ClCompile Include="Phys.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AnimStateMachine\StateSource\FallingState.cpp">
+      <Filter>Header Files\AnimStateMachine\StateSource</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimStateMachine\StateSource\LandingState.cpp">
+      <Filter>Header Files\AnimStateMachine\StateSource</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimStateMachine\StateSource\RisingState.cpp">
+      <Filter>Header Files\AnimStateMachine\StateSource</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FSM\AnimStates.h">
