--- a/HeirarchicalStateMachine.vcxproj
+++ b/HeirarchicalStateMachine.vcxproj
@@ -144,8 +144,11 @@
     <ClCompile Include="AnimStateMachine\AnimMachine.cpp" />
     <ClCompile Include="AnimStateMachine\AnimState.cpp" />
     <ClCompile Include="AnimStateMachine\StateSource\DeadState.cpp" />
+    <ClCompile Include="AnimStateMachine\StateSource\FallingState.cpp" />
     <ClCompile Include="AnimStateMachine\StateSource\HitState.cpp" />
     <ClCompile Include="AnimStateMachine\StateSource\IdleState.cpp" />
+    <ClCompile Include="AnimStateMachine\StateSource\LandingState.cpp" />
+    <ClCompile Include="AnimStateMachine\StateSource\RisingState.cpp" />
     <ClCompile Include="AnimStateMachine\StateSource\RunningState.cpp" />
     <ClCompile Include="Body.cpp" />
     <ClCompile Include="Cfg.cpp" />
